--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,8 +36,11 @@ body{
 } */
 
 
+
 .box1 .counter {
     /* background-color: aqua; */
+    margin-top: 15%;
+
     display: flex;
     justify-content: center;
     font-size: 200%;
@@ -46,6 +49,8 @@ body{
 }
 .box2 .counter{
     /* background-color: aquamarine; */
+    margin-top: 15%;
+
     display: flex;
     justify-content: center;
     font-size: 200%;
@@ -53,8 +58,27 @@ body{
 }
 .box3 .counter{
     /* background-color: blue; */
+    margin-top: 15%;
+
     display: flex;
     justify-content: center;
     font-size: 200%;
     color: rgb(253,180,75);
+}
+
+.box1 .bottom{
+    margin-top: 15%;
+    color: bisque;
+}
+.box2 .bottom{
+    margin-top: 15%;
+    color: bisque;
+}
+.box3 .bottom{
+    margin-top: 15%;
+    color: bisque;
+}
+.box3 .top{
+
+    padding-left: 10%;
 }
